mas datos pasados

--- a/newCSS.html
+++ b/newCSS.html
@@ -5,12 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="hojaCSS.css">
 </head>
 <body>
     <header>
         <h1>INICIO DE CSS</h1>
     </header>
-    
+    <main>
+        <h2>PROBANDO STILOS</h2>
+        <p class="parrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, quis!</p>
+        <br>
+        <p class="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores unde, beatae repudiandae quae in minus!</p>
+        <p class="parrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam suscipit eum at porro fugit hic rerum voluptate vel, eius temporibus beatae quos animi possimus voluptas ipsam? Cumque perspiciatis ad alias nostrum rem.</p>
+    </main>
+
 
     
 </body>
